--- a/5_autogen/1_lab1_autogen_agentchat.ipynb
+++ b/5_autogen/1_lab1_autogen_agentchat.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,6 +341,8 @@
     "                        system_message=\"You are a weather reporter for the city of Dublin. You tell the only the average temperature for the next day by specifying the date\",\n",
     "                        model_client_stream=True)\n",
     "history = []\n",
+    "MAX_HISTORY = 10\n",
+    "\n",
     "\n",
     "async def Chat(user_input: str):\n",
     "    global history\n",
@@ -348,6 +350,7 @@
     "    history.append(message)\n",
     "    response = await agent.on_messages(history, cancellation_token=CancellationToken())\n",
     "    history.append(response.chat_message)\n",
+    "    history = history[-MAX_HISTORY:]  #limit to history\n",
     "\n",
     "    print(\"Agent:\", response.chat_message.content)"
    ]
