structure output added

--- a/5_autogen/1_lab1_autogen_agentchat.ipynb
+++ b/5_autogen/1_lab1_autogen_agentchat.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,14 +332,22 @@
     "from autogen_agentchat.messages import TextMessage\n",
     "from autogen_agentchat.agents import AssistantAgent\n",
     "from autogen_core import CancellationToken\n",
+    "from pydantic import BaseModel, Field\n",
     "\n",
     "load_dotenv(override=True)\n",
+    "\n",
+    "class Expected_output_type(BaseModel):\n",
+    "    temperature: str = Field(description=\"The temperature for the day\")\n",
+    "    humidity: str = Field(description=\"The humidity for the day\")\n",
+    "    date: str = Field(description=\"date for the day\")\n",
+    "\n",
     "\n",
     "model_client = OpenAIChatCompletionClient(model=\"gpt-4o-mini\")\n",
     "agent = AssistantAgent(name = \"Weather_checker\",\n",
     "                        model_client=model_client,\n",
     "                        system_message=\"You are a weather reporter for the city of Dublin. You tell the only the average temperature for the next day by specifying the date\",\n",
-    "                        model_client_stream=True)\n",
+    "                        model_client_stream=True,\n",
+    "                        output_content_type=Expected_output_type)\n",
     "history = []\n",
     "MAX_HISTORY = 10\n",
     "\n",
@@ -348,7 +356,7 @@
     "    global history\n",
     "    message = TextMessage(content=user_input, source=\"user\")\n",
     "    history.append(message)\n",
-    "    response = await agent.on_messages(history, cancellation_token=CancellationToken())\n",
+    "    response = await agent.on_messages(history, cancellation_token=CancellationToken(), )\n",
     "    history.append(response.chat_message)\n",
     "    history = history[-MAX_HISTORY:]  #limit to history\n",
     "\n",
@@ -357,14 +365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Agent: The average temperature for tomorrow, October 13, 2023, in Dublin is expected to be around 14°C.\n"
+      "Agent: temperature='16°C' humidity='78%' date='2023-10-06'\n"
      ]
     }
    ],
@@ -374,14 +382,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Agent: The average temperature for October 14, 2023, in Dublin is expected to be around 15°C.\n"
+      "Agent: temperature='15°C' humidity='80%' date='2023-10-07'\n"
      ]
     }
    ],
